--- a/Algoritmia/Practicas/Practica 1/practica_01.ipynb
+++ b/Algoritmia/Practicas/Practica 1/practica_01.ipynb
@@ -26,12 +26,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Alumno: Alejandro Ortega Martinez"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `iterador_con_sustitucion`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +57,12 @@
     "            yield valor\n",
     "    \n",
     "\n",
-    "    pass"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +134,12 @@
     "    else:\n",
     "\n",
     "        yield elemento\n",
-    "    pass"
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +147,14 @@
      "output_type": "stream",
      "text": [
       "OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-0e49a1f65a62>:6: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working\n",
+      "  assert isinstance([4], collections.Iterable)\n"
      ]
     }
    ],
@@ -191,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +240,12 @@
     "   \n",
     " \n",
     "    \n",
-    "    pass"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +340,12 @@
     "   \n",
     "        \n",
     "        \n",
-    "    pass"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
